[metadata]
name = falafel-fava
version = 0.2.3
author = Regis Tomkiel
description = A collection of tools for Falafel Framework (Flask with MVC)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://getfalafel.com/docs/en
project_urls =
    Documentation = https://getfalafel.github.io/docs/en/
    Source Code = https://github.com/getfalafel/fava
    Issue Tracker = https://github.com/getfalafel/fava/issues/
    Twitter = https://twitter.com/tomtomkiel

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = = src
packages = find:
python_requires = >=3.9
install_requires =
    black
    toml
    requests
    inflect
    flask
    Flask-SQLAlchemy
    flask-marshmallow
    Flask-Cors
    SQLAlchemy
    SQLAlchemy-serializer
    jwt
    dynaconf


[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    fava = fava.cli:main